bzr-svn 0.4.16	UNRELEASED

  BUG FIXES

   * Don't print backtrace when error occurs while accessing repository root.
     (#296224)

bzr-svn 0.4.15	2008-11-10

  BUG FIXES

   * Ignore tags that happen to be files (another instance). (#290664)

   * Support copying from files with spaces in their names over http. (#268304)

   * Fix knit corruption because text revisions weren't stored properly. (#277043)

   * Cope with file properties being modified by other parties than 
     bzr-svn. (#295284)

   * Fix erroneous call to object.__init__() causing issues with Python2.6.

   * Don't take over when pulling from WebDAV source (without Subversion)
     (#274840)

bzr-svn 0.4.14	2008-11-03

  BUG FIXES

   * Fix compatibility with Bazaar 1.9. (#279444)

   * Cope with pushing files changed into directories. (#277369)

   * Don't assume root path can't change; Microsoft's CodePlex site 
     does this. (#278930)

   * Fix python2.6 deprecation warnings. (#292306)

   * Ignore tags that happen to be files. (#290664)

bzr-svn 0.4.13	2008-09-24

  BUG FIXES

   * Fix compatibility with Subversion 1.4 on Windows.

   * Fix bug modifying set of right hand side revisions during fetch. (#264740)

   * Fix linking against Subversion 1.5 on Windows. (#263570)

   * Avoid NoneType error when no revisions to push in "bzr dpush". (#267484)

   * Properly convert errors raised when starting a commit. (#267899)

   * Fix compatibility with Bazaar 1.7.

  FEATURES

   * Add support for using Apple keychain.

bzr-svn 0.4.12	2008-09-01

  BUG FIXES

   * Cope with svn+ prefix when setting tags. (#261748)

   * Fix contents of files when using stacked branching. (#262314)

   * Fix compatibility with Bazaar 1.7.

   * Use local application data directory on Windows for bzr-svn cache.
     (#231041)

   * No longer show backtrace when a generic DAV error occurs, as 
     this is usually a sign of a server-side error rather than a bug.
	 (#255159)
