@@ -5,6 +5,8 @@ bzr-svn 0.4.16	UNRELEASED
    * Don't print backtrace when error occurs while accessing repository root.
      (#296224)
 
+   * Add --svn-override-revprops option to svn-push.
+
 bzr-svn 0.4.15	2008-11-10
 
   BUG FIXES
